--- a/DAMSem09_CicloDeVidaDeLosFragmentos/app/src/main/res/layout/activity_main.xml
+++ b/DAMSem09_CicloDeVidaDeLosFragmentos/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,12 @@
     tools:context=".MainActivity">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainerView3"
+        android:id="@+id/fragmentContainerView1"
         android:name="com.example.damsem09_ciclodevidadelosfragmentos.BlankFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="226dp"
-        tools:layout_editor_absoluteY="245dp" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
