--- a/DAM_Sem11_Proyecto/app/src/main/res/navigation/mobile_navigation.xml
+++ b/DAM_Sem11_Proyecto/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,17 +7,20 @@
 
     <fragment
         android:id="@+id/navigation_home"
+        android:name="com.example.dam_sem11_proyecto.NotaFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_item_list" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
+        android:name="com.example.dam_sem11_proyecto.NotaFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_item_list" />
 
     <fragment
         android:id="@+id/navigation_notifications"
 
+        android:name="com.example.dam_sem11_proyecto.NotaFragment"
         android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_item_list" />
 </navigation>
