--- a/DAM_Sem11_Proyecto/app/src/main/res/layout/fragment_nota.xml
+++ b/DAM_Sem11_Proyecto/app/src/main/res/layout/fragment_nota.xml
@@ -4,41 +4,4 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="125dp"
-        android:layout_height="114dp">
-
-        <ImageView
-            android:id="@+id/imageViewFavorita"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/textViewTitulo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textViewTitulo"
-            app:layout_constraintTop_toTopOf="@+id/textViewTitulo"
-            app:srcCompat="@drawable/baseline_star_border_24" />
-
-        <TextView
-            android:id="@+id/textViewContenido"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/textViewTitulo"
-            app:layout_constraintTop_toBottomOf="@+id/textViewTitulo"
-            tools:text="@string/contenido" />
-
-        <TextView
-            android:id="@+id/textViewTitulo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="TextView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="@string/Titulo" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+    android:orientation="horizontal"/>
