--- a/DAM_Sem11_Proyecto/app/src/main/res/layout/fragment_item.xml
+++ b/DAM_Sem11_Proyecto/app/src/main/res/layout/fragment_item.xml
@@ -11,30 +11,27 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/textViewContenido"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/textViewTitulo"
-            app:layout_constraintTop_toBottomOf="@+id/textViewTitulo"
-            tools:ignore="MissingConstraints"
-            tools:text="@string/contenido" />
-
-        <TextView
             android:id="@+id/textViewTitulo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:ellipsize="end"
             android:maxLines="1"
             android:text="TextView"
-            android:textColor="@color/black"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="@string/Titulo" />
+
+        <TextView
+            android:id="@+id/textViewContenido"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="TextView"
+            app:layout_constraintStart_toStartOf="@+id/textViewTitulo"
+            app:layout_constraintTop_toBottomOf="@+id/textViewTitulo"
+            tools:text="@string/contenido" />
 
         <ImageView
             android:id="@+id/imageViewFavorita"
