--- a/DAM_Sem11_Proyecto/app/src/main/res/layout/fragment_item_list.xml
+++ b/DAM_Sem11_Proyecto/app/src/main/res/layout/fragment_item_list.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list"
-    android:name="com.example.dam_sem11_proyecto.NotaFragment2"
+    android:name="com.example.dam_sem11_proyecto.NotaFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".NotaFragment2"
+    tools:context=".NotaFragment"
     tools:listitem="@layout/fragment_item" />
